Fixed the pushing of files to the main server.
Need to add database check first so that no files have the same ID.